<?xml version="1.0"?>
<package format="3">
  <name>free_fleet</name>
  <version>0.0.1</version>
  <description>Fleet client and server library</description>
  <maintainer email="ngocnhan@todo.todo">ngocnhan</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>cyclonedds</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
