<?xml version="1.0"?>
<package format="2">
  <name>free_fleet_client_ros1</name>
  <version>0.0.1</version>
  <description>client ROS wrapper</description>
  <maintainer email="ngocnhan@todo.todo">ngocnhan</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <depend>free_fleet</depend>
</package>
